--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <section class="bg-gray-50 dark:bg-gray-900 dark:bg-gray-800">
         <div class="py-8 px-4 mx-auto  max-w-screen-xl lg:py-16 lg:px-6">
             <div class="max-w-screen-lg text-gray-500 sm:text-lg dark:text-gray-400" id="demo">
-                <gradio-app src="https://www.gradio.app/demo/hello_world/" />
+                <gradio-app src="https://hf.space/embed/stabilityai/stable-diffusion/" />
                 <!-- <gradio-app src="https://hf.space/embed/stabilityai/stable-diffusion/+?__theme=light" /> -->
             </div>
         </div>
