--- a/index.html
+++ b/index.html
@@ -70,6 +70,9 @@
             <div class="sm:flex sm:items-center sm:justify-between">
                 <span class="text-sm text-gray-500 sm:text-center dark:text-gray-400">© 2022 <a href="https://stablediffusionweb.com" class="hover:underline">Stable Diffusion Online</a>. All Rights Reserved.
                 </span>
+
+                <span class="text-sm text-gray-500 sm:text-center dark:text-gray-400">  <a href="license.html" target="_blank" class="hover:underline">License</a>
+                </span>
                 
             </div>
         </div>
