--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <nav class="bg-white border-gray-200 px-4 lg:px-6 py-2.5 dark:bg-gray-800">
             <div class="flex flex-wrap justify-between items-center mx-auto max-w-screen-xl">
                 <a href="https://stablediffusionweb.com" class="flex items-center">
-                    <img src="logo.svg" class="mr-3 h-6 sm:h-9" alt="Flowbite Logo" />
+                    <img src="logo.svg" class="mr-3 h-6 sm:h-9" alt="Stable Diffusion Logo" />
                     <span class="self-center text-xl font-semibold whitespace-nowrap dark:text-white">Stable Diffusion</span>
                 </a>
                 
@@ -27,7 +27,7 @@
             <div class="place-self-center mr-auto lg:col-span-7">
                 <h1 class="mb-4 max-w-2xl text-4xl font-extrabold leading-none md:text-5xl xl:text-6xl dark:text-white">Stable Diffusion Online</h1>
 
-                <p class="mb-2 max-w-2xl font-light text-gray-500 lg:mb-2 md:text-lg lg:text-xl dark:text-gray-400"> Stable Diffusion is a state of the art text-to-image model that generates images from text,empowers billions of people to create stunning art within seconds.</p>
+                <p class="mb-3 max-w-2xl font-light text-gray-500 lg:mb-2 md:text-lg lg:text-xl dark:text-gray-400">Stable Diffusion is a latent text-to-image diffusion model capable of generating photo-realistic images given any text input, cultivates autonomous freedom to produce incredible imagery,  empowers billions of people to create stunning art within seconds.</p>
                 <p class="mb-6 max-w-2xl font-light text-gray-500 lg:mb-8 md:text-lg lg:text-xl dark:text-gray-400">Create beautiful art using stable diffusion ONLINE for free.</p>
                 <a href="#demo" class="inline-flex justify-center items-center py-3 px-5 mr-3 text-base font-medium text-center text-white rounded-lg bg-primary-700 hover:bg-primary-800 focus:ring-4 focus:ring-primary-300 dark:focus:ring-primary-900">
                     Get started
@@ -60,7 +60,7 @@
             <div class="md:flex md:justify-between">
                 <div class="mb-6 md:mb-0">
                     <a href="https://stablediffusionweb.com" class="flex items-center">
-                        <img src="logo.svg" class="mr-3 h-8" alt="FlowBite Logo" />
+                        <img src="logo.svg" class="mr-3 h-8" alt="Stable Diffusion Logo" />
                         <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">Stable Diffusion</span>
                     </a>
                 </div>
