--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         </div>
     </footer>
     <script type="module"
-src="https://stablediffusionweb.com/gradio.entry.js">
+src="https://gradio.s3-us-west-2.amazonaws.com/3.3/gradio.js">
 </script>
     <script src="https://unpkg.com/flowbite@1.4.7/dist/flowbite.js"></script>
 
