改成iframe试试吧

--- a/index.html
+++ b/index.html
@@ -47,8 +47,9 @@
     <section class="bg-gray-50 dark:bg-gray-900 dark:bg-gray-800">
         <div class="py-8 px-4 mx-auto  max-w-screen-xl lg:py-16 lg:px-6">
             <div class="max-w-screen-lg text-gray-500 sm:text-lg dark:text-gray-400" id="demo">
-                <!-- <gradio-app src="https://app.stablediffusionweb.com/?__theme=light" /> -->
-                <gradio-app src="https://hf.space/embed/stabilityai/stable-diffusion/" />
+
+                <iframe src="https://app.stablediffusionweb.com/?__theme=light" frameborder="0" scrolling="no" id="external-frame"  height="1280" width="100%" ></iframe>
+              
             </div>
         </div>
       </section>
@@ -77,9 +78,10 @@
             </div>
         </div>
     </footer>
-    <script type="module"
-src="https://gradio.s3-us-west-2.amazonaws.com/3.3/gradio.js">
-</script>
+ 
+
+
+
     <script src="https://unpkg.com/flowbite@1.4.7/dist/flowbite.js"></script>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
