改成hf官方的iframe。把我自己的服务器退了

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="py-8 px-4 mx-auto  max-w-screen-xl lg:py-16 lg:px-6">
             <div class="max-w-screen-lg text-gray-500 sm:text-lg dark:text-gray-400" id="demo">
 
-                <iframe src="https://app.stablediffusionweb.com/?__theme=light" frameborder="0" scrolling="no" id="external-frame"  height="1280" width="100%" ></iframe>
+                <iframe src="https://hf.space/embed/stabilityai/stable-diffusion/?__theme=light" frameborder="0" scrolling="no" id="external-frame"  height="1480" width="100%" ></iframe>
               
             </div>
         </div>
