--- a/index.html
+++ b/index.html
@@ -7,6 +7,24 @@
     <title>Stable Diffusion Online</title>
     <meta name="description" content="Stable Diffusio Online Demo. FREE forever. Create beautiful art using stable diffusion ONLINE">
     <link href="./output.css" rel="stylesheet">
+    <style>
+
+    #outerdiv
+    {
+    width:100%;
+    height:1000px;
+    overflow:hidden;
+    position:relative;
+    }
+
+    #inneriframe
+    {
+    position:absolute;
+    top:-120px;
+    width:100%;
+    height:1480px;
+    }
+    </style>
 </head>
 <body>
     <header>
@@ -45,11 +63,11 @@
   
 
     <section class="bg-gray-50 dark:bg-gray-900 dark:bg-gray-800">
-        <div class="py-8 px-4 mx-auto  max-w-screen-xl lg:py-16 lg:px-6">
+        <div class="py-2 px-4 mx-auto  max-w-screen-xl lg:py-2 lg:px-6">
             <div class="max-w-screen-lg text-gray-500 sm:text-lg dark:text-gray-400" id="demo">
-
-                <iframe src="https://hf.space/embed/stabilityai/stable-diffusion/+?__theme=light" data-src="https://hf.space/embed/stabilityai/stable-diffusion/+" data-sdk="gradio" title="Gradio app" class="container p-0 flex-grow overflow-hidden space-iframe" allow="accelerometer; ambient-light-sensor; autoplay; battery; camera; clipboard-write; document-domain; encrypted-media; fullscreen; geolocation; gyroscope; layout-animations; legacy-image-formats; magnetometer; microphone; midi; oversized-images; payment; picture-in-picture; publickey-credentials-get; sync-xhr; usb; vr ; wake-lock; xr-spatial-tracking" sandbox="allow-forms allow-modals allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts allow-downloads" scrolling="no" height="1480"></iframe></main>
-	
+                <div id='outerdiv'>
+                    <iframe id="inneriframe" src="https://hf.space/embed/stabilityai/stable-diffusion/+?__theme=light" data-src="https://hf.space/embed/stabilityai/stable-diffusion/+" data-sdk="gradio" title="Gradio app" class="container p-0 flex-grow overflow-hidden space-iframe" allow="accelerometer; ambient-light-sensor; autoplay; battery; camera; clipboard-write; document-domain; encrypted-media; fullscreen; geolocation; gyroscope; layout-animations; legacy-image-formats; magnetometer; microphone; midi; oversized-images; payment; picture-in-picture; publickey-credentials-get; sync-xhr; usb; vr ; wake-lock; xr-spatial-tracking" sandbox="allow-forms allow-modals allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts allow-downloads" scrolling="no" height="1480" ></iframe></main>
+                </div>
             </div>
         </div>
       </section>
