修改png图片到免费的CDN

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 
             </div>
             <div class="hidden lg:mt-0 lg:col-span-5 lg:flex" >
-                <img src="Social+templates.png" alt="mockup" class="rounded-lg">
+                <img src="https://cdn.jsdelivr.net/gh/markliuyuxiang/nextjs/public/Social%2Btemplates%20(1).png" alt="mockup" class="rounded-lg">
             </div>   
                     
         </div>
